--- a/lab1/build.gradle
+++ b/lab1/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+	id 'war'
 	id 'org.springframework.boot' version '3.0.7'
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'org.jetbrains.kotlin.jvm' version '1.8.22'
@@ -56,8 +57,7 @@ configurations {
 }
 
 bootJar {
-	archiveBaseName = 'gs-producing-web-service'
-	archiveVersion =  '0.1.0'
+	archiveBaseName = 'lab1'
 }
 
 dependencies {
@@ -67,10 +67,12 @@ dependencies {
 	implementation 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-logging'
 	implementation 'org.springframework.ws:spring-ws-core'
 	implementation 'wsdl4j:wsdl4j'
 	jaxb("org.glassfish.jaxb:jaxb-xjc")
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
