Final fixes for 456

--- a/lab45/src/main/resources/application.properties
+++ b/lab45/src/main/resources/application.properties
@@ -4,6 +4,4 @@ spring.datasource.password=lolkek
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-
-logging.level.root=info
-logging.level.com.rproject.forest=debug
+server.port=8081
