--- a/lab-client45/build.gradle
+++ b/lab-client45/build.gradle
@@ -8,7 +8,7 @@ group = 'com.rbetik12'
 version = '1.0-SNAPSHOT'
 
 application {
-    mainClassName = "MainKt"
+    mainClassName = "lab2.client.MainKt"
 }
 
 repositories {
