--- a/lab45/build.gradle
+++ b/lab45/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'org.jetbrains.kotlin.jvm' version '1.8.21'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.8.21'
+	id 'war'
 }
 
 group = 'com.rproject'
