--- a/lab7/.gitignore
+++ b/lab7/.gitignore
@@ -24,9 +24,9 @@ out/
 .settings
 .springBeans
 .sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+#bin/
+#!**/src/main/**/bin/
+#!**/src/test/**/bin/
 
 ### NetBeans ###
 /nbproject/private/
@@ -40,3 +40,4 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+.idea
